--- a/index.html
+++ b/index.html
@@ -3,15 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de la Serpiente</title>
+    <link rel="icon" type="image/svg+xml" href="./assets/logo-snake.png" />
     <link rel="stylesheet" href="styles.css">
+    <title>Juego de la Serpiente</title>
 </head>
 <body>
-    <h1>Juego de la Serpiente</h1>
-    <div id="score">Puntuación: 0</div>
-    <canvas id="gameCanvas" width="600" height="600"></canvas>
-    <button id="startButton">Iniciar Juego</button>
-    <button id="restartButton" style="display: none;">Reiniciar</button>
+    <header>
+        <a href="#">
+            <img src="" alt="">
+            andressuarez.com
+        </a>
+        <h1>Snake Game
+            <img src="./assets/logo-snakeGame.png" alt="">
+        </h1>
+        
+    </header>
+    <main>
+        <div id="score">Puntuación: 0</div>
+        <canvas id="gameCanvas" width="500" height="500"></canvas>
+        <button id="startButton">Iniciar Juego</button>
+        <button id="restartButton" style="display: none;">Reiniciar</button>
+    </main>
+    <footer>
+        Desarrollado por andressuarez.com.co
+    </footer>
+
     <script src="snake.js"></script>
 </body>
 </html>
