--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="./assets/logo-snake.png" />
+    <link rel="icon" type="image/svg+xml" href="./assets/Logos/logo-snake.png" />
     <link rel="stylesheet" href="styles.css">
-    <title>Juego de la Serpiente</title>
+    <title>Snake Game</title>
 </head>
 <body>
     <header>
-        <a href="#">
-            <img src="" alt="">
-            andressuarez.com
+        <a href="https://andressuarez.com.co/" target="_blank">
+            <img src="/assets/Logos/logo-acsb.png" alt="">
         </a>
         <h1>Snake Game
             <img src="./assets/logo-snakeGame.png" alt="">
@@ -20,12 +19,45 @@
     </header>
     <main>
         <div id="score">Puntuación: 0</div>
-        <canvas id="gameCanvas" width="500" height="500"></canvas>
+        <canvas id="gameCanvas" width="460" height="460"></canvas>
         <button id="startButton">Iniciar Juego</button>
         <button id="restartButton" style="display: none;">Reiniciar</button>
     </main>
+
+    <!-- Modal de fin del juego -->
+    <div id="gameOverModal" class="modal">
+        <div class="modal-content">
+        <span id="closeModal" class="close">&times;</span>
+        <h2>GAME OVER</h2>
+        <p id="finalScore"></p>
+        <button id="restartGame">Reiniciar Juego</button>
+        </div>
+    </div>  
+
     <footer>
-        Desarrollado por andressuarez.com.co
+        <div class="by-foot">
+            Desarrollado por <a href=""> andressuarez.com.co</a>
+        </div>
+        <div class="logos-foot">
+            <!--Enlace a Mypage -->
+            <a href="https://andressuarez.com.co/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-square-heart-fill" viewBox="0 0 16 16">
+                    <path d="M2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132"/>
+                </svg>
+            </a>
+            <!--Enlace a Github -->
+            <a href="https://github.com/ACSBITMEN" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                </svg>
+            </a>
+            <!--Enlace a LinkendIn -->
+            <a href="https://www.linkedin.com/in/andr%C3%A9s-su%C3%A1rez-bully-5a5432285/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+                </svg>
+            </a>
+        </div>
     </footer>
 
     <script src="snake.js"></script>
