--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </h1>
         
     </header>
-    <main>
+    <main id="main">
         <div id="score">Puntuación: 0</div>
         <canvas id="gameCanvas" width="660" height="420"></canvas>
         <button id="startButton">Iniciar Juego</button>
