--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://andressuarez.com.co/" target="_blank">
             <img src="/assets/Logos/logo-acsb.png" alt="">
         </a>
-        <h1>Snake Game
+        <h1>Snake_Game
             <img src="./assets/logo-snakeGame.png" alt="">
         </h1>
         
