cambios de URL img

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <a href="https://andressuarez.com.co/" target="_blank">
-            <img src="/assets/Logos/logo-acsb.png" alt="">
+            <img src="https://raw.githubusercontent.com/ACSBITMEN/Snake-Game/refs/heads/main/assets/Logos/logo-acsb.png" alt="">
         </a>
         <h1>Snake_Game
-            <img src="./assets/logo-snakeGame.png" alt="">
+            <img src="https://raw.githubusercontent.com/ACSBITMEN/Snake-Game/refs/heads/main/assets/logo-snakeGame.png" alt="">
         </h1>
         
     </header>
